# Zodia

./: .gitmodules  CMakeLists.txt  README.md
examples/move/: game.zodia  script.ionia
src/: main.cpp  version.h
src/core/: resman.cpp  resman.h  timer.h  window.cpp  window.h
src/define/: key.h  parent.h  sdltype.h
src/game/: gamewin.cpp  gamewin.h  generalscene.cpp  generalscene.h  mapparser.cpp  mapparser.h
src/scene/: gamescene.h  scene.cpp  scene.h  sceneman.cpp  sceneman.h
src/script/: host.cpp  host.h  runtime.cpp  runtime.h
src/script/runtime/: key.cpp  key.h  math.cpp  math.h  rand.cpp  rand.h  scene.cpp  scene.h  sprite.cpp  sprite.h  timer.cpp  timer.h
src/script/runtime/helper/: bounding.cpp  bounding.h  collide.cpp  collide.h
src/sprite/: background.cpp  background.h  group.cpp  group.h  number.cpp  number.h  sprite.cpp  sprite.h
src/util/: base64.cpp  base64.h  file.h  logger.cpp  logger.h  os.h
